[package]
name = "homopolymer-compress"
description = "Homopolymer compression of arbitrary sequences."
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
repository = "https://github.com/sebschmi/homopolymer-compress-rs"
rust-version = "1.58.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "homopolymer-compress"

[lib]

[dependencies]
log = "0.4.14"
simplelog = "0.11.2"
bio = "0.40.0"
clap = {version = "3.1.5", features = ["derive"]}
crossbeam = "0.8.1"